fixed align of form

--- a/source/less/blocks/adventages.less
+++ b/source/less/blocks/adventages.less
@@ -2,23 +2,6 @@
     position: relative;
     background-color: rgba(242, 242, 242, 1);
     overflow: hidden;
-    &::after{
-        width: 2000px;
-        height: 400px;
-        content: "";
-        background-color: white;
-        position: absolute;
-        top: -116px;
-        left: -70px;    
-        transform: rotate(-6deg);
-        @media @mobile {
-            top: -230px;
-        }
-        @media @desktop {
-            top: -115px;
-            height: 500px;
-        }
-    }
 }
 
 .adventages__wrapper{
