--- a/source/less/blocks/registration.less
+++ b/source/less/blocks/registration.less
@@ -43,7 +43,6 @@
     @media @desktop {
         display: grid;
         grid-template-columns: 1fr 1fr;
-        align-items: baseline;
         column-gap: 70px;
         margin-bottom: 70px;
     }
